<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cst_splash_bg"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/basicCS"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/basic_programming"
                app:layout_constraintEnd_toEndOf="@+id/basic_programming"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:background="@color/gray"
                        android:contentDescription="@string/needless_string"
                        android:src="@drawable/comp_fund"
                        android:onClick="showAds"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/basics_of_computer_science"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_main_activity_topic"
                        android:textStyle="normal"
                        android:onClick="showAds"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/advance"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="10dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toTopOf="@+id/quantum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/basicCS"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@color/gray"
                        android:contentDescription="@string/needless_string"
                        android:src="@drawable/adv_comp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/teal_200"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/advanced_computing"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_main_activity_topic"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/basic_programming"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/advance"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basicCS">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@color/gray"
                        android:contentDescription="@string/needless_string"
                        android:src="@drawable/coding_size_square" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/gray"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/basics_of_programming"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_main_activity_topic"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/quantum"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingTop="10dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/basic_programming"
                app:layout_constraintTop_toBottomOf="@+id/advance">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@color/gray"
                        android:contentDescription="@string/needless_string"
                        android:src="@drawable/quantum_computer" />

                    <TextView
                        android:id="@+id/quantum_computing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#FF964B00"
                        android:gravity="center"
                        android:paddingLeft="3dp"
                        android:paddingTop="5dp"
                        android:paddingRight="3dp"
                        android:paddingBottom="5dp"
                        android:text="@string/quantum_computing"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_main_activity_topic"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>